--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -62,6 +62,7 @@
         app:layout_constraintTop_toTopOf="@+id/tvOtherLogin"/>
 
     <ImageView
+        android:id="@+id/btnLoginWithGoogle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/common_google_signin_btn_icon_light_normal"
@@ -69,4 +70,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:contentDescription="@string/button_login_google" />
+
+    <TextView
+        android:id="@+id/tvCreateAccount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Crie uma conta"
+        android:textColor="@color/link"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
