--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     tools:context=".activity.RegistrationActivity">
 
     <TextView
@@ -25,7 +26,7 @@
         android:padding="16dp"
         android:maxLines="1"
         android:layout_marginTop="32dp"
-        android:layout_marginHorizontal="16dp"
+        android:layout_marginHorizontal="32dp"
         app:layout_constraintTop_toBottomOf="@id/tvRegistration" />
 
     <EditText
@@ -34,18 +35,30 @@
         android:layout_height="wrap_content"
         android:hint="@string/password"
         android:layout_marginTop="16dp"
-        android:layout_marginHorizontal="16dp"
+        android:layout_marginHorizontal="32dp"
         android:padding="16dp"
         android:maxLines="1"
         app:layout_constraintTop_toBottomOf="@id/etEmail"/>
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnRegistration"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/signUp"
-        android:layout_marginTop="16dp"
-        android:layout_marginHorizontal="16dp"
+        android:textColor="@color/white"
+        android:layout_marginTop="32dp"
+        android:layout_marginHorizontal="32dp"
+        android:background="@drawable/button_primary"
         app:layout_constraintTop_toBottomOf="@id/etPassword"/>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btnBack"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/login"
+        android:layout_marginTop="16dp"
+        android:layout_marginHorizontal="32dp"
+        android:background="@drawable/button_second"
+        app:layout_constraintTop_toBottomOf="@id/btnRegistration"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
