--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -37,13 +37,15 @@
         android:maxLines="1"
         app:layout_constraintTop_toBottomOf="@id/etEmail"/>
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="32dp"
         android:text="@string/login"
+        android:textColor="@color/white"
+        android:background="@drawable/button_primary"
         app:layout_constraintTop_toBottomOf="@id/etPassword"/>
 
     <View
