--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="color_default">#D16969</color>
     <color name="link">#2196F3</color>
+    <color name="border_button">#D19E00</color>
+    <color name="color_button">#1E1C1C</color>
+    <color name="border_grey">#80B0BDB4</color>
 </resources>
