--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -38,6 +38,7 @@
         android:layout_marginHorizontal="32dp"
         android:padding="16dp"
         android:maxLines="1"
+        android:inputType="textPassword"
         app:layout_constraintTop_toBottomOf="@id/etEmail"/>
 
     <androidx.appcompat.widget.AppCompatButton
